# learn-german

./: .gitignore  README.md  pyproject.toml
speaknseek/: cli.py
